deploy: 1d14c15b3cf95f5cf8e72e0789bc507d33096615

--- a/_modules/sEQE.html
+++ b/_modules/sEQE.html
@@ -544,7 +544,7 @@
 
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="n">filterNo</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">mono</span><span class="o">.</span><span class="n">checkFilter</span><span class="p">()</span>
-        <span class="n">data_average_factor</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">ui</span><span class="o">.</span><span class="n">data_average_factor</span><span class="o">.</span><span class="n">value</span><span class="p">()</span> <span class="c1"># TODO: Add GUI window with corresponding name</span>
+        <span class="n">data_average_factor</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">ui</span><span class="o">.</span><span class="n">data_average_factor</span><span class="o">.</span><span class="n">value</span><span class="p">()</span>
 
         <span class="n">startNM_F2</span> <span class="o">=</span> <span class="nb">int</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">ui</span><span class="o">.</span><span class="n">startNM_F2</span><span class="o">.</span><span class="n">value</span><span class="p">())</span>
         <span class="n">stopNM_F2</span> <span class="o">=</span> <span class="nb">int</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">ui</span><span class="o">.</span><span class="n">stopNM_F2</span><span class="o">.</span><span class="n">value</span><span class="p">())</span>                
