--- a/sEQE.html
+++ b/sEQE.html
@@ -564,7 +564,7 @@ If there is no active figure, sleep for <em>interval</em> seconds instead.</p>
   <hr/>
 
   <div role="contentinfo">
-    <p>&#169; Copyright 2022, Anna Jungbluth.</p>
+    <p>&#169; Copyright 2022, AFMD Group - notably Kate Trinkhaus for logo and Maximilian Hanauske for documentation.</p>
   </div>
 
   Built with <a href="https://www.sphinx-doc.org/">Sphinx</a> using a
