deploy: 9d7d1fb8ea5d6b6ddf4ffc2a20bf2ae55da3b486

--- a/_modules/index.html
+++ b/_modules/index.html
@@ -76,6 +76,7 @@
 <li><a href="lockin.html">lockin</a></li>
 <li><a href="monochromator.html">monochromator</a></li>
 <li><a href="sEQE.html">sEQE</a></li>
+<li><a href="sEQE_Analysis.html">sEQE_Analysis</a></li>
 <li><a href="sEQE_Analysis_template.html">sEQE_Analysis_template</a></li>
 </ul>
 
