--- a/genindex.html
+++ b/genindex.html
@@ -75,7 +75,11 @@
 <h1 id="index">Index</h1>
 
 <div class="genindex-jumpbox">
- <a href="#C"><strong>C</strong></a>
+ <a href="#A"><strong>A</strong></a>
+ | <a href="#C"><strong>C</strong></a>
+ | <a href="#D"><strong>D</strong></a>
+ | <a href="#E"><strong>E</strong></a>
+ | <a href="#F"><strong>F</strong></a>
  | <a href="#G"><strong>G</strong></a>
  | <a href="#H"><strong>H</strong></a>
  | <a href="#I"><strong>I</strong></a>
@@ -90,9 +94,19 @@
  | <a href="#W"><strong>W</strong></a>
  
 </div>
+<h2 id="A">A</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="analysis_generated/sEQE_Analysis.html#sEQE_Analysis.MainWindow.add_Fits">add_Fits() (sEQE_Analysis.MainWindow method)</a>
+</li>
+  </ul></td>
+</tr></table>
+
 <h2 id="C">C</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="analysis_generated/sEQE_Analysis.html#sEQE_Analysis.MainWindow.calculate_EQE">calculate_EQE() (sEQE_Analysis.MainWindow method)</a>
+</li>
       <li><a href="control_generated/sEQE.html#sEQE.MainWindow.calculatePower">calculatePower() (sEQE.MainWindow method)</a>
 </li>
       <li><a href="control_generated/monochromator.html#monochromator.Monochromator.checkFilter">checkFilter() (monochromator.Monochromator method)</a>
@@ -107,8 +121,14 @@
 </li>
       <li><a href="control_generated/monochromator.html#monochromator.Monochromator.chooseWavelength">chooseWavelength() (monochromator.Monochromator method)</a>
 </li>
+      <li><a href="analysis_generated/sEQE_Analysis.html#sEQE_Analysis.MainWindow.clear_EL_plot">clear_EL_plot() (sEQE_Analysis.MainWindow method)</a>
+</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="analysis_generated/sEQE_Analysis.html#sEQE_Analysis.MainWindow.clear_EQE_plot">clear_EQE_plot() (sEQE_Analysis.MainWindow method)</a>
+</li>
+      <li><a href="analysis_generated/sEQE_Analysis.html#sEQE_Analysis.MainWindow.clear_plot">clear_plot() (sEQE_Analysis.MainWindow method)</a>
+</li>
       <li><a href="control_generated/lockin.html#lockin.LockIn.connect">connect() (lockin.LockIn method)</a>
 
       <ul>
@@ -128,13 +148,61 @@
   </ul></td>
 </tr></table>
 
-<h2 id="G">G</h2>
+<h2 id="D">D</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="control_generated/sEQE.html#sEQE.MainWindow.get_logger">get_logger() (sEQE.MainWindow method)</a>
+      <li><a href="analysis_generated/sEQE_Analysis.html#sEQE_Analysis.MainWindow.double_fit">double_fit() (sEQE_Analysis.MainWindow method)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="analysis_generated/sEQE_Analysis.html#sEQE_Analysis.MainWindow.double_fit_MLJ">double_fit_MLJ() (sEQE_Analysis.MainWindow method)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="E">E</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="analysis_generated/sEQE_Analysis.html#sEQE_Analysis.MainWindow.export_EQE">export_EQE() (sEQE_Analysis.MainWindow method)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="F">F</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="analysis_generated/sEQE_Analysis.html#sEQE_Analysis.MainWindow.fit_EL_EQE">fit_EL_EQE() (sEQE_Analysis.MainWindow method)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="G">G</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="analysis_generated/sEQE_Analysis.html#sEQE_Analysis.MainWindow.gaussian">gaussian() (sEQE_Analysis.MainWindow method)</a>
+</li>
+      <li><a href="analysis_generated/sEQE_Analysis.html#sEQE_Analysis.MainWindow.gaussian_disorder">gaussian_disorder() (sEQE_Analysis.MainWindow method)</a>
+</li>
+      <li><a href="analysis_generated/sEQE_Analysis.html#sEQE_Analysis.MainWindow.gaussian_disorder_double">gaussian_disorder_double() (sEQE_Analysis.MainWindow method)</a>
+</li>
+      <li><a href="analysis_generated/sEQE_Analysis.html#sEQE_Analysis.MainWindow.gaussian_disorder_double_sim">gaussian_disorder_double_sim() (sEQE_Analysis.MainWindow method)</a>
+</li>
+      <li><a href="analysis_generated/sEQE_Analysis.html#sEQE_Analysis.MainWindow.gaussian_double">gaussian_double() (sEQE_Analysis.MainWindow method)</a>
+</li>
+      <li><a href="analysis_generated/sEQE_Analysis.html#sEQE_Analysis.MainWindow.gaussian_double_sim">gaussian_double_sim() (sEQE_Analysis.MainWindow method)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="analysis_generated/sEQE_Analysis.html#sEQE_Analysis.MainWindow.gaussian_EL">gaussian_EL() (sEQE_Analysis.MainWindow method)</a>
+</li>
+      <li><a href="analysis_generated/sEQE_Analysis.html#sEQE_Analysis.MainWindow.gaussian_EL_disorder">gaussian_EL_disorder() (sEQE_Analysis.MainWindow method)</a>
+</li>
+      <li><a href="analysis_generated/sEQE_Analysis.html#sEQE_Analysis.MainWindow.gaussian_EQE">gaussian_EQE() (sEQE_Analysis.MainWindow method)</a>
+</li>
+      <li><a href="analysis_generated/sEQE_Analysis.html#sEQE_Analysis.MainWindow.gaussian_EQE_disorder">gaussian_EQE_disorder() (sEQE_Analysis.MainWindow method)</a>
+</li>
+      <li><a href="control_generated/sEQE.html#sEQE.MainWindow.get_logger">get_logger() (sEQE.MainWindow method)</a>
+</li>
       <li>
     GUI_template
 
@@ -153,6 +221,8 @@
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="control_generated/sEQE.html#sEQE.MainWindow.HandleStopCompleteScanButton">HandleStopCompleteScanButton() (sEQE.MainWindow method)</a>
+</li>
+      <li><a href="analysis_generated/sEQE_Analysis.html#sEQE_Analysis.MainWindow.heatMap">heatMap() (sEQE_Analysis.MainWindow method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -176,6 +246,8 @@
 </li>
       <li><a href="control_generated/sEQE.html#sEQE.MainWindow.load_naming">load_naming() (sEQE.MainWindow method)</a>
 </li>
+      <li><a href="analysis_generated/sEQE_Analysis.html#sEQE_Analysis.MainWindow.load_sim_dict">load_sim_dict() (sEQE_Analysis.MainWindow method)</a>
+</li>
       <li>
     lockin
 
@@ -198,10 +270,36 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="control_generated/sEQE.html#sEQE.main">main() (in module sEQE)</a>
+
+      <ul>
+        <li><a href="analysis_generated/sEQE_Analysis.html#sEQE_Analysis.main">(in module sEQE_Analysis)</a>
 </li>
+      </ul></li>
       <li><a href="control_generated/sEQE.html#sEQE.MainWindow">MainWindow (class in sEQE)</a>
+
+      <ul>
+        <li><a href="analysis_generated/sEQE_Analysis.html#sEQE_Analysis.MainWindow">(class in sEQE_Analysis)</a>
 </li>
+      </ul></li>
       <li><a href="control_generated/sEQE.html#sEQE.MainWindow.measure">measure() (sEQE.MainWindow method)</a>
+</li>
+      <li><a href="analysis_generated/sEQE_Analysis.html#sEQE_Analysis.MainWindow.MLJ_double">MLJ_double() (sEQE_Analysis.MainWindow method)</a>
+</li>
+      <li><a href="analysis_generated/sEQE_Analysis.html#sEQE_Analysis.MainWindow.MLJ_double_disorder">MLJ_double_disorder() (sEQE_Analysis.MainWindow method)</a>
+</li>
+      <li><a href="analysis_generated/sEQE_Analysis.html#sEQE_Analysis.MainWindow.MLJ_double_gaussian">MLJ_double_gaussian() (sEQE_Analysis.MainWindow method)</a>
+</li>
+      <li><a href="analysis_generated/sEQE_Analysis.html#sEQE_Analysis.MainWindow.MLJ_gaussian">MLJ_gaussian() (sEQE_Analysis.MainWindow method)</a>
+</li>
+      <li><a href="analysis_generated/sEQE_Analysis.html#sEQE_Analysis.MainWindow.MLJ_gaussian_disorder">MLJ_gaussian_disorder() (sEQE_Analysis.MainWindow method)</a>
+</li>
+      <li><a href="analysis_generated/sEQE_Analysis.html#sEQE_Analysis.MainWindow.MLJ_gaussian_EL">MLJ_gaussian_EL() (sEQE_Analysis.MainWindow method)</a>
+</li>
+      <li><a href="analysis_generated/sEQE_Analysis.html#sEQE_Analysis.MainWindow.MLJ_gaussian_EL_disorder">MLJ_gaussian_EL_disorder() (sEQE_Analysis.MainWindow method)</a>
+</li>
+      <li><a href="analysis_generated/sEQE_Analysis.html#sEQE_Analysis.MainWindow.MLJ_gaussian_EQE">MLJ_gaussian_EQE() (sEQE_Analysis.MainWindow method)</a>
+</li>
+      <li><a href="analysis_generated/sEQE_Analysis.html#sEQE_Analysis.MainWindow.MLJ_gaussian_EQE_disorder">MLJ_gaussian_EQE_disorder() (sEQE_Analysis.MainWindow method)</a>
 </li>
       <li>
     module
@@ -215,13 +313,15 @@
 </li>
         <li><a href="control_generated/sEQE.html#module-sEQE">sEQE</a>
 </li>
+        <li><a href="analysis_generated/sEQE_Analysis.html#module-sEQE_Analysis">sEQE_Analysis</a>
+</li>
         <li><a href="analysis_generated/sEQE_Analysis_template.html#module-sEQE_Analysis_template">sEQE_Analysis_template</a>
 </li>
       </ul></li>
-      <li><a href="control_generated/sEQE.html#sEQE.MainWindow.monoCheckFilter">monoCheckFilter() (sEQE.MainWindow method)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="control_generated/sEQE.html#sEQE.MainWindow.monoCheckFilter">monoCheckFilter() (sEQE.MainWindow method)</a>
+</li>
       <li><a href="control_generated/sEQE.html#sEQE.MainWindow.monoCheckGrating">monoCheckGrating() (sEQE.MainWindow method)</a>
 </li>
       <li>
@@ -261,6 +361,20 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="control_generated/sEQE.html#sEQE.MainWindow.pause">pause() (sEQE.MainWindow method)</a>
 </li>
+      <li><a href="analysis_generated/sEQE_Analysis.html#sEQE_Analysis.MainWindow.plot_EQE">plot_EQE() (sEQE_Analysis.MainWindow method)</a>
+</li>
+      <li><a href="analysis_generated/sEQE_Analysis.html#sEQE_Analysis.MainWindow.plot_fit_EQE">plot_fit_EQE() (sEQE_Analysis.MainWindow method)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="analysis_generated/sEQE_Analysis.html#sEQE_Analysis.MainWindow.pre_EQE">pre_EQE() (sEQE_Analysis.MainWindow method)</a>
+</li>
+      <li><a href="analysis_generated/sEQE_Analysis.html#sEQE_Analysis.MainWindow.pre_fit_EQE">pre_fit_EQE() (sEQE_Analysis.MainWindow method)</a>
+</li>
+      <li><a href="analysis_generated/sEQE_Analysis.html#sEQE_Analysis.MainWindow.pre_plot_EL_EQE">pre_plot_EL_EQE() (sEQE_Analysis.MainWindow method)</a>
+</li>
+      <li><a href="analysis_generated/sEQE_Analysis.html#sEQE_Analysis.MainWindow.pre_plot_EQE">pre_plot_EQE() (sEQE_Analysis.MainWindow method)</a>
+</li>
   </ul></td>
 </tr></table>
 
@@ -289,6 +403,13 @@
 </li>
       </ul></li>
       <li>
+    sEQE_Analysis
+
+      <ul>
+        <li><a href="analysis_generated/sEQE_Analysis.html#module-sEQE_Analysis">module</a>
+</li>
+      </ul></li>
+      <li>
     sEQE_Analysis_template
 
       <ul>
@@ -307,6 +428,12 @@
         <li><a href="analysis_generated/sEQE_Analysis_template.html#sEQE_Analysis_template.Ui_MainWindow.setupUi">(sEQE_Analysis_template.Ui_MainWindow method)</a>
 </li>
       </ul></li>
+      <li><a href="analysis_generated/sEQE_Analysis.html#sEQE_Analysis.MainWindow.sim_double_fit">sim_double_fit() (sEQE_Analysis.MainWindow method)</a>
+</li>
+      <li><a href="analysis_generated/sEQE_Analysis.html#sEQE_Analysis.MainWindow.sim_double_fit_single">sim_double_fit_single() (sEQE_Analysis.MainWindow method)</a>
+</li>
+      <li><a href="analysis_generated/sEQE_Analysis.html#sEQE_Analysis.MainWindow.subtract_Fit">subtract_Fit() (sEQE_Analysis.MainWindow method)</a>
+</li>
   </ul></td>
 </tr></table>
 
@@ -334,6 +461,10 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="control_generated/monochromator.html#monochromator.Monochromator.waitForOK">waitForOK() (monochromator.Monochromator method)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="analysis_generated/sEQE_Analysis.html#sEQE_Analysis.MainWindow.writeText">writeText() (sEQE_Analysis.MainWindow method)</a>
 </li>
   </ul></td>
 </tr></table>
