deploy: d74422e10e1fdd5b0849de7bdaeadf3e221fb7c9

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <nav data-toggle="wy-nav-shift" class="wy-nav-side">
       <div class="wy-side-scroll">
         <div class="wy-side-nav-search" >
-            <a href="#">
+            <a href="#" class="icon icon-home"> AFMDs sEQE setup
             <img src="_static/AFMD_logo.png" class="logo" alt="Logo"/>
           </a>
 <div role="search">
