--- a/py-modindex.html
+++ b/py-modindex.html
@@ -33,7 +33,7 @@
     <nav data-toggle="wy-nav-shift" class="wy-nav-side">
       <div class="wy-side-scroll">
         <div class="wy-side-nav-search" >
-            <a href="index.html">
+            <a href="index.html" class="icon icon-home"> AFMDs sEQE setup
             <img src="_static/AFMD_logo.png" class="logo" alt="Logo"/>
           </a>
 <div role="search">
